--- a/app/src/main/res/layout/activity_memory.xml
+++ b/app/src/main/res/layout/activity_memory.xml
@@ -1,15 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".topicActivity.memoryActivity">
-    <TextView
+
+
+
+
+    <RelativeLayout
+        android:id="@+id/RL_memo_toolbar_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="memory"
-        android:textSize="100dp" />
-</LinearLayout>
+        android:layout_height="80dp"
+        android:fitsSystemWindows="true"
+        android:alpha="0.8"
+        android:background="@color/colorStyle2"
+        android:orientation="vertical"
+        >
+
+        <ImageView
+            android:id="@+id/IV_memo_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_mode_edit_white_24dp"
+            />
+        <TextView
+            android:id="@+id/TV_memo_topbar_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="10dp"
+            android:text="备忘录"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/IV_memo_edit"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:textColor="@android:color/white"
+            android:textSize="28dp"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/RL_memo_content_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/RL_memo_toolbar_content"
+        android:paddingTop="10dp"
+        >
+
+        <include
+            android:id="@+id/Layout_memo_item_add"
+            layout="@layout/rv_memo_item_add_header"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:visibility="gone"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerView_memo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/Layout_memo_item_add"
+            android:alpha="0.95"
+            android:paddingBottom="10dp"
+
+            android:paddingTop="15dp"
+            />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@+id/RL_memo_toolbar_content"
+        android:layout_above="@+id/RL_memo_content_bg"
+        android:background="@drawable/view_bottom_shadow" />
+
+</RelativeLayout>
